--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 .example-search {
   width: 100%;
   padding-left: 70px;
@@ -33,7 +32,57 @@
   background: url(./assets/images/Background.jpg);
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-position: center; 
+  background-position: center;
   height: 100vh;
   width: 100%;
+}
+
+.error-text {
+  padding-left: 5px;
+  color: red;
+}
+
+.breadcrumb-product-detail-not-found {
+  background-image: url(./assets/images/BackgroundError.jpg);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  width: 100%;
+  height: 100vh;
+}
+
+.title-page-not-found {
+  text-align: center;
+  padding-top: 100px;
+}
+
+.title-page-not-found button {
+  color: #fff;
+  background-color: rgba(255, 0, 0, 0.4);
+  width: 100px;
+  height: 50px;
+  border-color: rgba(226, 232, 240, 0.3);
+  border-width: 1px;
+  overflow: hidden;
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px,
+    rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px,
+    rgba(0, 0, 0, 0.07) 0px 16px 16px;
+  border-radius: 5px;
+}
+
+.log-out {
+  text-align: center;
+}
+.log-out button {
+  color: #fff;
+  background-color: rgba(255, 0, 0, 0.4);
+  width: 80px;
+  height: 40px;
+  border-color: rgba(226, 232, 240, 0.3);
+  border-width: 1px;
+  overflow: hidden;
+  box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 1px, rgba(0, 0, 0, 0.07) 0px 2px 2px,
+    rgba(0, 0, 0, 0.07) 0px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px,
+    rgba(0, 0, 0, 0.07) 0px 16px 16px;
+  border-radius: 5px;
 }
