--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 .example-search {
   width: 100%;
   padding-left: 70px;
@@ -29,11 +28,11 @@
 }
 
 .background-makeup {
-  padding-top: 140px;
+  padding-top: 90px;
   background: url(./assets/images/Background.jpg);
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-position: center; 
+  background-position: center;
   height: 100vh;
   width: 100%;
 }
@@ -58,4 +57,27 @@
   display: flex !important;
   justify-content: space-between !important;
 }
-
+.form-signin {
+  padding: 40px;
+  box-shadow: rgb(17 17 26 / 10%) 0px 8px 24px,
+    rgb(17 17 26 / 10%) 0px 16px 56px, rgb(17 17 26 / 10%) 0px 24px 80px;
+  background: rgb(255, 255, 255, 0.5);
+}
+.form-signin {
+  padding: 40px;
+  box-shadow: rgb(17 17 26 / 10%) 0px 8px 24px,
+    rgb(17 17 26 / 10%) 0px 16px 56px, rgb(17 17 26 / 10%) 0px 24px 80px;
+  background: rgb(255, 255, 255, 0.5);
+}
+.btn-lg {
+  margin: 30px 0;
+}
+.form-label-group {
+  position: relative;
+}
+.icon-pass {
+  position: absolute;
+  top: 55%;
+  right: 10px;
+  cursor: pointer;
+}
