--- a/src/App.css
+++ b/src/App.css
@@ -111,3 +111,14 @@ tbody tr:hover {
   margin: 20px;
   padding: 5px;
 }
+
+.not-found-background {
+  background-image: url('./assets/images/BackgroundError.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+  background-attachment: fixed;
+  position: relative;
+}
